[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/TheEnd.gd" type="Script" id=1]
[ext_resource path="res://fonts/letter.tres" type="DynamicFont" id=2]

[node name="TheEnd" type="CanvasLayer"]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Time" type="Label" parent="VBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 132.0
margin_right = 640.0
margin_bottom = 148.0
rect_min_size = Vector2( 640, 16 )
custom_fonts/font = ExtResource( 2 )
text = "Your time was 4 minutes, 21 seconds."
align = 1
valign = 1

[node name="Label_Letters" type="Label" parent="VBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 152.0
margin_right = 640.0
margin_bottom = 168.0
rect_min_size = Vector2( 640, 16 )
custom_fonts/font = ExtResource( 2 )
text = "You collected four out of six letters."
align = 1
valign = 1

[node name="Label_Deaths" type="Label" parent="VBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 172.0
margin_right = 640.0
margin_bottom = 188.0
rect_min_size = Vector2( 640, 16 )
custom_fonts/font = ExtResource( 2 )
text = "You collected four out of six letters."
align = 1
valign = 1

[node name="Control" type="Control" parent="VBox"]
margin_top = 192.0
margin_right = 640.0
margin_bottom = 208.0
rect_min_size = Vector2( 16, 16 )

[node name="Label_ThankYou" type="Label" parent="VBox"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 212.0
margin_right = 640.0
margin_bottom = 228.0
rect_min_size = Vector2( 640, 16 )
custom_fonts/font = ExtResource( 2 )
text = "Thank you for playing."
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]
